--- a/frontend/studysphere/.gitignore
+++ b/frontend/studysphere/.gitignore
@@ -1,11 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-backend/node_modules/
-frontend/studysphere/node_modules/
+/node_modules
+/.pnp
+.pnp.js
 
-# config
-backend/.env
+#config
+.env
 
 # testing
 /coverage
